--- a/cms/app/views/dm_cms/admin/cms_pages/_content_toolbar.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_content_toolbar.html.erb
@@ -1,14 +1,12 @@
-<%
-  list = []
-  if contentitem_list.count > 1
-    unless contentitem == contentitem_list.first
-      list << link_to(icons('font-arrow-up'), move_up_admin_cms_contentitem_path(contentitem), title: "Move content up", method: :patch)
-    end
-    unless contentitem == contentitem_list.last
-      list << link_to(icons('font-arrow-down'), move_down_admin_cms_contentitem_path(contentitem), title: "Move content down", method: :patch)
-    end
-  end
-  list << link_to(icon_label('icon-edit', 'Edit'), [:edit, :admin, contentitem], class: "nav-btn-primary")
-  list << link_to(icon_label('icon-trash', 'Delete'), [:admin, contentitem], method: :delete, class: "nav-btn-danger", data: {confirm: 'Are you sure you wish to delete this item?'} )
-%>
-<%= nav_bar_items( list ) %>
+<div class="pull-right">
+  <% if contentitem_list.count > 1 %>
+    <% unless contentitem == contentitem_list.first %>
+      <%= link_to icons('icon-arrow-up10'), move_up_admin_cms_contentitem_path(contentitem), title: "Move content up", class: "btn btn-link btn-icon", method: :patch %>
+    <% end %>
+    <% unless contentitem == contentitem_list.last %>
+      <%= link_to icons('icon-arrow-down10'), move_down_admin_cms_contentitem_path(contentitem), title: "Move content down", class: "btn btn-link btn-icon", method: :patch %>
+    <% end %>
+  <% end %>
+  <%= link_to icons('icon-pencil3'), [:edit, :admin, contentitem], class: "btn btn-link btn-icon" %>
+  <%= link_to icons('icon-remove3'), [:admin, contentitem], method: :delete, class: "btn btn-link btn-icon", data: {confirm: 'Are you sure you wish to delete this item?'} %>
+</div>
