--- a/cms/app/views/dm_cms/admin/cms_pages/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_form.html.erb
@@ -1,35 +1,37 @@
 <% new_record = @cms_page.new_record? %>
 <% submit_url = (new_record ? create_page_admin_cms_page_path(@current_page) : admin_cms_page_path(@cms_page)) %>
-<% title = (new_record ? "New Child for: " : "Editing Page: ") %>
+<% title = (new_record ? "New Child Page " : "Editing Page Details ") %>
 
-<%= simple_form_for @cms_page, :url => submit_url do |f| %>
-  <%= f.error_notification :message => "<p>Please review the problems below</p>"%>
-  <%= content_box do %>
-    <%= locale_frame :title => '' do |locale| %>
-      <%= f.input "title_#{locale}", :label => 'Page Title', hint: 'The title of the page, shown in the browser title' %>
-      <%= f.input "menutitle_#{locale}", :label => 'Menu Title', hint: 'Text shown in a menu (which might be shorter than the full title).  If blank, <br/>page will not show up in any auto-generated menus' %>
+<%= simple_form_for @cms_page, url: submit_url,
+      html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings do |f| %>
+
+  <%= f.error_notification message: "Please review the problems below" %>
+  <%= panel header: false do %>
+    <%= locale_tabs do |locale| %>
+      <%= f.input "title_#{locale}", label: 'Page Title', hint: 'The title of the page, shown in the browser title' %>
+      <%= f.input "menutitle_#{locale}", label: 'Menu Title', hint: 'Text shown in a menu (which might be shorter than the full title).  If blank, <br/>page will not show up in any auto-generated menus' %>
     <% end %>
 
-    <%= f.input :published, :as => :toggle, :label => 'Publish It?' %>
-    <%= f.input :slug, :label => 'Page Slug', :hint => 'Leave blank to have auto-generated based on title.' %>
-    <%= f.input :pagetype, :label => 'Page Type', :collection => CmsPage::PAGETYPE, :include_blank => false %>
+    <%= f.input :published, as: :toggle, label: 'Publish It?' %>
+    <%= f.input :slug, label: 'Page Slug', hint: 'Leave blank to have auto-generated based on title.' %>
+    <%= f.input :pagetype, label: 'Page Type', collection: CmsPage::PAGETYPE, include_blank: false %>
     <div id="pagetype_link">
       <%= f.input :link %>
     </div>
     <% templates = template_menu_list %>
     <% if templates %>
-      <%= f.input :template, :label => 'Template to Use', :collection => templates, :include_blank => false,
-              :hint => 'Template to use for this page. Child pages can inherit this template' %>
+      <%= f.input :template, label: 'Template to Use', collection: templates, include_blank: false,
+              hint: 'Template to use for this page. Child pages can inherit this template' %>
     <% else %>
-      <%= f.input :template, :label => 'Template to Use', :hint => "Leave blank to inherit the parent's template" %>
+      <%= f.input :template, label: 'Template to Use', hint: "Leave blank to inherit the parent's template" %>
     <% end %>
     <% if false #--- disable this for now %>
-      <%= f.input :menuimage, :label => 'Menu Image' %>
+      <%= f.input :menuimage, label: 'Menu Image' %>
     <% end %>
-    <%= f.input :requires_login, :as => :toggle, :label => 'Requires Login', :hint => 'Page will require user to be logged in to access' %>
-    <%= f.input :preferred_show_social_buttons, :as => :toggle, label: 'Show social buttons' %>
+    <%= f.input :requires_login, as: :toggle, label: 'Requires Login', hint: 'Page will require user to be logged in to access' %>
+    <%= f.input :preferred_show_social_buttons, as: :toggle, label: 'Show social buttons' %>
 
-    <%= submit_or_cancel :cancel_url => {:action => :show, :id => @current_page} %>
+    <%= submit_or_cancel cancel_url: {action: :show, id: @current_page} %>
 
   <% end %>
 
