--- a/cms/app/views/dm_cms/admin/cms_pages/_tree.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/_tree.html.erb
@@ -1,4 +1,5 @@
-<li data-item_id="<%= item.id %>" class="<%= 'root' if item.is_root? %> <%= 'tree_closed' if !sub_items.blank? %>" >
+<% open_or_closed = sub_items.blank? ? '' : (cookies["page_tree_#{item.id}"] ? 'tree_open' : 'tree_closed') %>
+<li data-item_id="<%= item.id %>" class="<%= 'root' if item.is_root? %> <%= open_or_closed %>" >
   <dl>
     <dt>
       <% if !item.is_root? %>
@@ -15,5 +16,5 @@
       <%= link_to "New Child", new_page_admin_cms_page_path(item) %>
     </dd>
   </dl>
-  <%= (sub_items.blank? ? '' : content_tag(:ul, nested_tree(sub_items), :class => 'sub_tree', :style => (item.is_root? ? '' : 'display:none'))) %>
+  <%= (sub_items.blank? ? '' : content_tag(:ul, nested_tree(sub_items), :class => 'sub_tree', :style => ((item.is_root? || open_or_closed == 'tree_open') ? '' : 'display:none'))) %>
 </li>
